# Methodes-dev-logiciel

./: Remarques
Duvidas_Testes/: CMakeLists.txt
Duvidas_Testes/src/: SimpleClasses.cpp  SimpleClasses.hpp  main.cpp  template.hpp
tp_1/src/: cartesien.cpp  cartesien.hpp  point.hpp  polaire.cpp  polaire.hpp
tp_1/test/: tp1_test.cpp
tp_2/src/: cartesien.cpp  cartesien.hpp  nuage.hpp  point.cpp  point.hpp  polaire.cpp  polaire.hpp
tp_2/test/: tp2_test.cpp
tp_3/: CMakeLists.txt
tp_3/src/: chaine.hpp  cosinus.hpp  exception.cpp  exception.hpp  exponentielle.hpp  factorielle.hpp  puissance.hpp
tp_3/test/: tp3_test.cpp
tp_4/: CMakeLists.txt
tp_4/src/: carte.cpp  carte.hpp  consommateur.cpp  consommateur.hpp  paquet.cpp  paquet.hpp  ressource.cpp  ressource.hpp  usine.cpp  usine.hpp  vecteur.hpp
tp_4/test/: test_mouchard.cpp  test_vecteur.cpp  tp4_test.cpp
tp_5/: CMakeLists.txt
tp_5/src/: classe.hpp  comparateur.hpp  echantillon.hpp  histogramme.hpp  valeur.hpp
tp_5/test/: tp5_test.cpp
